--- a/css/H5.css
+++ b/css/H5.css
@@ -2,6 +2,15 @@
 * @Author: linshuling
 * @Date:   2018-04-20 14:23:40
 * @Last Modified by:   linshuling
-* @Last Modified time: 2018-04-21 10:58:57
+* @Last Modified time: 2018-04-21 14:21:28
 */
 /* H5对象的全局样式 */
+.h5_page{
+    width: 100%;
+    height: 100%;
+    background-color:#ddd;
+    position: relative;
+
+    background-size:100%;
+    background-repeat: no-repeat;
+}
